name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
               , dependent-sum
               , dependent-sum-template
  exposed-modules:
    Backend
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , dependent-sum
               , dependent-sum-template
               , lens
               , modern-uri
               , obelisk-backend
               , obelisk-executable-config
               , obelisk-executable-config-inject
               , text
