name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , text
               , foldl
               , file-embed
               , snap
               , bytestring
               , reflex-dom-core
               , frontend
               , obelisk-backend
               , dependent-sum
               , dependent-sum-template
               , mmark
               , modern-uri
               , yaml
               , aeson
               , directory
               , filepath
  exposed-modules:
    Backend
    Backend.Markdown
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , text
               , foldl
               , directory
               , filepath
               , file-embed
               , snap
               , bytestring
               , reflex-dom-core
               , frontend
               , dependent-sum
               , dependent-sum-template
               , lens
               , modern-uri
               , obelisk-backend
               , obelisk-executable-config
               , obelisk-executable-config-inject
               , text
               , mmark
               , modern-uri
               , yaml
               , aeson
