name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , text
               , foldl
               , snap
               , bytestring
               , reflex-dom-core
               , frontend
               , obelisk-backend
               , dependent-sum
               , dependent-sum-template
               , mmark
               , mmark-ext
               , modern-uri
               , yaml
               , aeson
               , directory
               , filepath
  exposed-modules:
    Backend
    Backend.Markdown
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , frontend
               , obelisk-backend
