name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: aeson
               , base
               , dependent-sum
               , dependent-sum-template
               , obelisk-route
               , mtl
               , text
               , these
               , universe
               , reflex

  exposed-modules:
    Common.Api
    Common.Route
  ghc-options: -Wall
