name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: aeson
               , base
               , bytestring
               , dependent-sum
               , dependent-sum-template
               , obelisk-route
               , mtl
               , text
               , these
               , universe
               , reflex
               , filepath
               , template-haskell
               , universe-template
  exposed-modules:
    Common.Api
    Common.Route
  ghc-options: -Wall
