name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex-dom
               , foldl
               , static
               , text
               , string-conv
               , obelisk-route
               , clay
               , mmark
               , modern-uri
  exposed-modules:
    Frontend
    Frontend.Css
    Frontend.Markdown
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex-dom
               , static
               , foldl
               , text
               , frontend
               , string-conv
               , obelisk-route
               , clay
               , mmark
               , modern-uri
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
